--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,11 +2,31 @@
 <html>
   <head>
     <title>Todo</title>
-    
-
+   
     
   </head>
+
   <body>
+  <style> 
+  li{display: inline-block;
+  	margin:0px;
+  	padding-right:10px;
+  	border-style: solid;
+  	border-width:2px;
+  	padding:20px;
+
+  }
+ li:hover{
+background-color: blue;
+    color: white;
+
+ }
+  li a:hover {
+    background-color: blue;
+    color: white;
+}
+  </style>
+
   <div class="navbar">
   	<ul>
   	<li><%= link_to "Home", root_path%></li> 
