Styled with h1 gradient

--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,5 +1,5 @@
 
-<h1>Welcome!</h1>
+<h1>Welcome! Welcome!</h1>
 <p>Here are a list of all your items</p>
 <br> 
 <style>
@@ -23,9 +23,9 @@ p{
 	border-color: pink;
 }
 h1 {
-
+	 text-shadow: 6px 2px black;
 	font-family: Tahoma, Geneva, sans-serif;
-	font-size: 45px;
+	font-size: 60px;
 	color: green;
 }
 
