Everything done, but login error

--- a/app/views/items/_form.html.erb
+++ b/app/views/items/_form.html.erb
@@ -5,12 +5,16 @@
 border-style:solid ;
 border-width: 2px;
 border-color: blue;
+margin-top: 20px;
+border-radius: 10px;
+background-color:gray;
 margin-left: 40px;
 margin-right:700px;
 font-family: "Century Gothic",CenturyGothic, sans-serif;
 padding: 30px;
 
 }
+
 </style>
 
 <div class="new">
